cluster/apps/self-hosted/radar/app/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &name radar
spec:
  # noinspection KubernetesUnknownValues
  hostnames: [ 'radar.${DOMAIN_NAME}' ]
  parentRefs:
    - name: envoy
      namespace: envoy-system

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: '/'
      backendRefs:
        - name: *name
          port: 9280
